change structure add statistic operation
