# src/controllers/operation.js
@@ -28,8 +28,7 @@ const createOperation = async (req, res, next) => {
       category: req.body.category,
       comments: req.body.comments,
       amount: req.body.amount,
-      balanceAfter: req.body.balanceAfter,
-      typeBalanceAfter: req.body.typeBalanceAfter,
+      owner: userId,
     };
 
     const operation = await financeServices.createOperation(
@@ -41,7 +40,7 @@ const createOperation = async (req, res, next) => {
       status: "success",
       code: HttpCode.CREATED,
       data: {
-        operation,
+        ...operation,
       },
     });
   } catch (error) {
@@ -49,4 +48,34 @@ const createOperation = async (req, res, next) => {
   }
 };
 
-module.exports = { getAllFinance, createOperation };
+const getStatistic = async (req, res, next) => {
+  try {
+    const userId = req.user.id;
+    const { month, year } = req.params;
+    const getMonth = new Date(`${year}, ${month}`).getMonth();
+    const statisticFrom = Number(
+      Date.parse(new Date(year, getMonth, 2)).toString().slice(0, 10)
+    );
+    const statisticTo = Number(
+      Date.parse(new Date(year, getMonth + 1, 1))
+        .toString()
+        .slice(0, 10)
+    );
+
+    const statistic = await financeServices.getStatistic(
+      userId,
+      statisticFrom,
+      statisticTo
+    );
+
+    return res.status(HttpCode.OK).json({
+      status: "success",
+      code: HttpCode.OK,
+      statistic,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+module.exports = { getAllFinance, createOperation, getStatistic };
